Implements productsGet
